// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`onPaste replacer norwegian letters 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "kind": "document",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "data": Object {},
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "kind": "text",
                "leaves": Array [
                  Object {
                    "kind": "leaf",
                    "marks": Array [],
                    "text": "æøåÆØÅ",
                  },
                ],
              },
            ],
            "type": "paragraph",
          },
          Object {
            "data": Object {},
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "kind": "text",
                "leaves": Array [
                  Object {
                    "kind": "leaf",
                    "marks": Array [],
                    "text": "Paragraph text",
                  },
                ],
              },
            ],
            "type": "paragraph",
          },
        ],
        "type": "section",
      },
    ],
  },
  "kind": "value",
}
`;

exports[`onPaste replacer with all characters 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "kind": "document",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "data": Object {},
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "kind": "text",
                "leaves": Array [
                  Object {
                    "kind": "leaf",
                    "marks": Array [],
                    "text": "a, b, c, d, e, f, g, h, i, j, k, l, m, n, o, p, q, r, s, t, u, v, w, x, y, z, æ, ø, å",
                  },
                ],
              },
            ],
            "type": "paragraph",
          },
          Object {
            "data": Object {},
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "kind": "text",
                "leaves": Array [
                  Object {
                    "kind": "leaf",
                    "marks": Array [],
                    "text": "A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, Q, R, S, T, U, V, W, X, Y, Z, Æ, Ø, Å",
                  },
                ],
              },
            ],
            "type": "paragraph",
          },
          Object {
            "data": Object {},
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "kind": "text",
                "leaves": Array [
                  Object {
                    "kind": "leaf",
                    "marks": Array [],
                    "text": "Paragraph text",
                  },
                ],
              },
            ],
            "type": "paragraph",
          },
        ],
        "type": "section",
      },
    ],
  },
  "kind": "value",
}
`;

exports[`onPaste replacer with cr character 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "kind": "document",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "data": Object {},
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "kind": "text",
                "leaves": Array [
                  Object {
                    "kind": "leaf",
                    "marks": Array [],
                    "text": "This is a text string that contains cr's",
                  },
                ],
              },
            ],
            "type": "paragraph",
          },
          Object {
            "data": Object {},
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "kind": "text",
                "leaves": Array [
                  Object {
                    "kind": "leaf",
                    "marks": Array [],
                    "text": "A new line",
                  },
                ],
              },
            ],
            "type": "paragraph",
          },
          Object {
            "data": Object {},
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "kind": "text",
                "leaves": Array [
                  Object {
                    "kind": "leaf",
                    "marks": Array [],
                    "text": "Another new line",
                  },
                ],
              },
            ],
            "type": "paragraph",
          },
          Object {
            "data": Object {},
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "kind": "text",
                "leaves": Array [
                  Object {
                    "kind": "leaf",
                    "marks": Array [],
                    "text": "Paragraph text",
                  },
                ],
              },
            ],
            "type": "paragraph",
          },
        ],
        "type": "section",
      },
    ],
  },
  "kind": "value",
}
`;

exports[`onPaste replacer with illegal characters 1`] = `
Object {
  "document": Object {
    "data": Object {},
    "kind": "document",
    "nodes": Array [
      Object {
        "data": Object {},
        "isVoid": false,
        "kind": "block",
        "nodes": Array [
          Object {
            "data": Object {},
            "isVoid": false,
            "kind": "block",
            "nodes": Array [
              Object {
                "kind": "text",
                "leaves": Array [
                  Object {
                    "kind": "leaf",
                    "marks": Array [],
                    "text": "Paragraph text",
                  },
                ],
              },
            ],
            "type": "paragraph",
          },
        ],
        "type": "section",
      },
    ],
  },
  "kind": "value",
}
`;
